[package]
name = "surreal_devl"
version = "1.0.5"
edition = "2021"
description = "Contains core logic of surreal derive"
readme = "README.md"
repository = "https://github.com/dev-logs/surreal-devl"
license = "MIT"
keywords = ["surreal", "surrealdb", "db", "query-builder"]

[package.metadata]
# Will log the query command at runtime
surreal_enable_log = false
# Will log the generated code at build time
surreal_enable_compile_log = false
# Change the naming convention of generated statement into camel case
surreal_use_camel_case = false
# The log namespace, apply for both build time log and runtime log
surreal_namespace = "surrealql-derive"
# The macro name that use for info log, for example
surreal_info_log_macro = "println"
# The macro name that use for warning log, for example
surreal_warn_log_macro = "println"

[dependencies]
surrealdb = { version = "1.0.0", default-features = false }
cargo_metadata = "0.18.1"
surrealdb_id = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
chrono = "0.4.35"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.107"
tokio = "1.36.0"