[package]
name = "surreal_devl"
version = "2.2.2"
edition = "2021"
description = "Contains core logic of surreal derive"
readme = "README.md"
repository = "https://github.com/dev-logs/surreal-devl"
license = "MIT"
keywords = ["surreal", "surrealdb", "db", "query-builder"]
homepage = "https://devlog.studio"

[package.metadata]
# Will log the query command at runtime
surreal_enable_log = false
# Will log the generated code at build time
surreal_enable_compile_log = false
# Change the naming convention of generated statement into camel case
surreal_use_camel_case = false
# The log namespace, apply for both build time log and runtime log
surreal_namespace = "surrealql-derive"
# The macro name that use for info log, for example
surreal_info_log_macro = "println"
# The macro name that use for warning log, for example
surreal_warn_log_macro = "println"

[dependencies]
surrealdb = { version = "^2.2.0", default-features = false }
cargo_metadata = { version = "^0.18.1", default-features = false }
serde = { version = "^1.0.197", default-features = false, features = ["derive"] }
uuid = { version = "^1.11.0", default-features = false }
chrono = { version = "^0.4.35", default-features = false }

[dev-dependencies]
chrono = "^0.4.35"
serde = { version = "^1.0.197", features = ["derive"] }
